--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 welcome to vikram singh's first devops project. this is the first developers commit
- kjsjjd
- second commit also 
- khhdfkhhehkdhcchk
- jdkjkjcjfckju
+after this commit it will automatically trigger and deploy by jenkins and ansible
 
 3rd
